Analysis of the accuracy data for the forwards mode autodiff

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -217,31 +217,20 @@
     "\n",
     "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5, TanYam7, Vern6]\n",
     "\n",
-    "f_grad_times, f_grad_data = profile(solvers, select_autodiff,\n",
-    "    [derivative, burnsolution, params, ForwardDiff.gradient]);  # Running the forward mode \n",
-    "# hessians = profile(solvers, select_autodiff,\n",
-    "#     [derivative, burnsolution, params, ForwardDiff.hessian]);   # Running the hessians \n",
+    "# f_grad_times, f_grad_data = profile(solvers, select_autodiff,\n",
+    "#     [derivative, burnsolution, params, ForwardDiff.gradient]);  # Running the forward mode \n",
+    "hessians = profile(solvers, select_autodiff,\n",
+    "    [derivative, burnsolution, params, ForwardDiff.hessian]);   # Running the hessians \n",
     "# solvers = profile(solvers, run_solver, [derivative, burnsolution, params]); # Running the solvers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1×11 Matrix{Float64}:\n",
-       " 0.0197032  0.00491757  0.00951547  …  0.00624635  0.0111264  0.00867314"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#* Anaysis for the time values of the forwards mode gradients\n",
     "tests = hcat(f_grad_times...);  # Concatenating into an array for manipulation\n",
     "tests = tests[2:end, 1:end];    # Removing the compile runs\n",
     "fmean = mean(tests, dims=1);    # Calculating the solver averages\n",
@@ -250,20 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = hcat(f_grad_data...);    # So these are extremely different\n",
-    "fmean = median(data, dims=2);   # Getting the average value of each parameter gradient\n",
-    "data = data .- fmean;           # Calculating the deviations from the median\n",
-    "\n",
-    "\n",
-    "#? So I need to normalise the data in this setting. I need to take the mean of the normalised deviations and the variances of the normalised deviations\n",
-    "\n",
-    "# fmean = mean(data, dims=1);     # Caclulating the means of the solvers\n",
-    "# fvars = var(data, dims=1);      # Caclulating the variances of the solvers \n",
-    "# fmean"
+    "#* Analysis of the data values for the forwards mode gradients =\n",
+    "data = hcat(f_grad_data...);                        # So these are extremely different\n",
+    "gradient_mean = median(data, dims=2);               # Average value of each parameter gradient\n",
+    "data = (data .- gradient_mean) ./ gradient_mean;    # Calculating the normalised deviations\n",
+    "solver_accuracy = mean(data, dims=1);               # Caclulating the means of the solvers\n",
+    "solver_varience = var(data, dims=1);                # Caclulating the variances of the solvers "
    ]
   },
   {
