Time analysis for the hessians

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,9 +219,34 @@
     "\n",
     "# f_grad_times, f_grad_data = profile(solvers, select_autodiff,\n",
     "#     [derivative, burnsolution, params, ForwardDiff.gradient]);  # Running the forward mode \n",
-    "hessians = profile(solvers, select_autodiff,\n",
+    "hessian_times, hessian_data = profile(solvers, select_autodiff,\n",
     "    [derivative, burnsolution, params, ForwardDiff.hessian]);   # Running the hessians \n",
     "# solvers = profile(solvers, run_solver, [derivative, burnsolution, params]); # Running the solvers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×11 Matrix{Float64}:\n",
+       " 0.105721  0.023599  0.0208315  0.695468  …  0.0249325  0.0289048  0.029189"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#* Analysis for the time values of the hessian calculations\n",
+    "times = hcat(hessian_times...); # Array construction for ease of manipulation \n",
+    "times = times[2:end, 1:end];    # Removing the compilation run\n",
+    "hmean = mean(times, dims=1);    # Calculating the average time\n",
+    "hvars = var(times, dims=1);     # Caclulating the varience by solver"
    ]
   },
   {
@@ -230,6 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#! Naming in these sections is critical\n",
     "#* Anaysis for the time values of the forwards mode gradients\n",
     "tests = hcat(f_grad_times...);  # Concatenating into an array for manipulation\n",
     "tests = tests[2:end, 1:end];    # Removing the compile runs\n",
@@ -257,7 +283,9 @@
    "source": [
     "So I need to get the normalised working. I might also pay to change how the results are returned from the profile function. Perhaps if I just return the information that is always the same. This would be the vector of outputs and the time results then I should be able to do each manipulation separately. Yes I like this.\n",
     "\n",
-    "So this is from tomorrow onward. I also need the boxplot like thing."
+    "So this is from tomorrow onward. I also need the boxplot like thing.\n",
+    "\n",
+    "Now, the time analysis is going to be pretty constant. I could add this back into the profile function however, I think this breaks up the logic a little bit and the return becomes awkward. I could write a function to do the time analysis or I could just do it manually for the four cases. I will start by doing it manually for the four cases but then I will probably write a function."
    ]
   }
  ],
