writing the time analysis function

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -226,27 +226,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1×11 Matrix{Float64}:\n",
-       " 0.105721  0.023599  0.0208315  0.695468  …  0.0249325  0.0289048  0.029189"
+       "time_analysis"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Given the time ouput of the `profile` function, this function calculates the time statistics and returns the means and variances as two column vectors. \n",
+    "\"\"\"\n",
+    "function time_analysis(time_data::Vector{Any})::Tuple{Matrix{Float64}, Matrix{Float64}}\n",
+    "    times = hcat(time_data...);     # Array construction for ease of manipulation \n",
+    "    times = times[2:end, 1:end];    # Removing the compilation run\n",
+    "    tmean = mean(times, dims=1);    # Calculating the average time\n",
+    "    tvars = var(times, dims=1);     # Caclulating the varience by solver\\\n",
+    "    return tmean, tvars\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "MethodError: no method matching time_analysis(::Matrix{Float64})\n\u001b[0mClosest candidates are:\n\u001b[0m  time_analysis(\u001b[91m::Vector{Vector{Float64}}\u001b[39m) at In[71]:4\n\u001b[0m  time_analysis(\u001b[91m::Vector{Any}\u001b[39m) at In[75]:4",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching time_analysis(::Matrix{Float64})\n\u001b[0mClosest candidates are:\n\u001b[0m  time_analysis(\u001b[91m::Vector{Vector{Float64}}\u001b[39m) at In[71]:4\n\u001b[0m  time_analysis(\u001b[91m::Vector{Any}\u001b[39m) at In[75]:4",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[79]:2",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
+     ]
+    }
+   ],
+   "source": [
     "#* Analysis for the time values of the hessian calculations\n",
-    "times = hcat(hessian_times...); # Array construction for ease of manipulation \n",
-    "times = times[2:end, 1:end];    # Removing the compilation run\n",
-    "hmean = mean(times, dims=1);    # Calculating the average time\n",
-    "hvars = var(times, dims=1);     # Caclulating the varience by solver"
+    "hessian_mean, hessian_vars = time_analysis(hessian_times);"
    ]
   },
   {
