Simplified time analysis using the new

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -191,6 +191,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "time_analysis"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Given the time ouput of the `profile` function, this function calculates the time statistics and returns the means and variances as two column vectors. \n",
+    "\"\"\"\n",
+    "function time_analysis(time_data::Vector{Any})::Tuple{Matrix{Float64}, Matrix{Float64}}\n",
+    "    times = hcat(time_data...);     # Array construction for ease of manipulation \n",
+    "    times = times[2:end, 1:end];    # Removing the compilation run\n",
+    "    tmean = mean(times, dims=1);    # Calculating the average time\n",
+    "    tvars = var(times, dims=1);     # Caclulating the varience by solver\\\n",
+    "    return tmean, tvars\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [],
@@ -226,73 +255,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hessian_mean, hessian_vars = time_analysis(hessian_times);  # Time analysis for hessians\n",
+    "f_grad_means, f_grad_vars = time_analysis(f_grad_times);    # Time analysis for forward gradients "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "time_analysis"
+       "([0.019703202777438693 0.004917568630642361 … 0.011126438776652018 0.008673138088650174], [9.960164620931917e-5 7.051373782158206e-7 … 0.00014603567427684538 0.0001139109059633054])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "\"\"\"\n",
-    "Given the time ouput of the `profile` function, this function calculates the time statistics and returns the means and variances as two column vectors. \n",
-    "\"\"\"\n",
-    "function time_analysis(time_data::Vector{Any})::Tuple{Matrix{Float64}, Matrix{Float64}}\n",
-    "    times = hcat(time_data...);     # Array construction for ease of manipulation \n",
-    "    times = times[2:end, 1:end];    # Removing the compilation run\n",
-    "    tmean = mean(times, dims=1);    # Calculating the average time\n",
-    "    tvars = var(times, dims=1);     # Caclulating the varience by solver\\\n",
-    "    return tmean, tvars\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching time_analysis(::Matrix{Float64})\n\u001b[0mClosest candidates are:\n\u001b[0m  time_analysis(\u001b[91m::Vector{Vector{Float64}}\u001b[39m) at In[71]:4\n\u001b[0m  time_analysis(\u001b[91m::Vector{Any}\u001b[39m) at In[75]:4",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching time_analysis(::Matrix{Float64})\n\u001b[0mClosest candidates are:\n\u001b[0m  time_analysis(\u001b[91m::Vector{Vector{Float64}}\u001b[39m) at In[71]:4\n\u001b[0m  time_analysis(\u001b[91m::Vector{Any}\u001b[39m) at In[75]:4",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[79]:2",
-      " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1116"
-     ]
-    }
-   ],
-   "source": [
-    "#* Analysis for the time values of the hessian calculations\n",
-    "hessian_mean, hessian_vars = time_analysis(hessian_times);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#! Naming in these sections is critical\n",
-    "#* Anaysis for the time values of the forwards mode gradients\n",
-    "tests = hcat(f_grad_times...);  # Concatenating into an array for manipulation\n",
-    "tests = tests[2:end, 1:end];    # Removing the compile runs\n",
-    "fmean = mean(tests, dims=1);    # Calculating the solver averages\n",
-    "fvars = var(tests, dims=1);     # Calculating the solver variances"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
