Analysis for the hessian data.

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -265,21 +265,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0.019703202777438693 0.004917568630642361 … 0.011126438776652018 0.008673138088650174], [9.960164620931917e-5 7.051373782158206e-7 … 0.00014603567427684538 0.0001139109059633054])"
+       "11-element Vector{Float64}:\n",
+       " -0.30538402290592453\n",
+       "  0.00986113502896478\n",
+       " -0.008826009121766981\n",
+       " -0.001844123113837549\n",
+       "  0.003753685512460653\n",
+       "  0.0020803881230940405\n",
+       " -0.035732105738875496\n",
+       " -0.08252977960782096\n",
+       " -0.13305103099618648\n",
+       " -1.4523526918593928\n",
+       " -0.023692657629605318"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#* Analysis of the data for the hessian calculations\n",
+    "data = cat(hessian_data..., dims=3);    # Array construction for ease of use\n",
+    "meds = median(data, dims=3);            # Calculating the medians\n",
+    "devs = @.abs(data .- meds) ./ data;     # Calculating the normalised deviations\n",
+    "\n",
+    "accuracy = Vector{Float64}(undef, 11);  # A vector to store solver accuracy\n",
+    "varience = Vector{Float64}(undef, 11);  # A vector to store the variences\n",
+    "\n",
+    "for i in 1:size(devs)[3];   # Looping through the sovler dimension \n",
+    "    accuracy[i] = mean(devs[1:end, 1:end, i]);  # Calculating the accuracy\n",
+    "    varience[i] = var(devs[1:end, 1:end, i]);   # Calculatinf the varience\n",
+    "end\n",
+    "\n",
+    "accuracy\n"
+   ]
   },
   {
    "cell_type": "code",
