Data analysis function for the accuracy

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -220,6 +220,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "This function takes the data output of the profile function and analyses the results irrespective of the dimensionality.\n",
+    "\"\"\"\n",
+    "function accuracy_analysis(accuracy_data::Vector{Any})::Tuple{Matrix{Float64}, Matrix{Float64}}\n",
+    "    data = cat(accuracy_data..., dims=3);   # Array construction for ease of use\n",
+    "    meds = median(data, dims=3);            # Calculating the medians\n",
+    "    devs = @.abs(data .- meds) ./ data;     # Calculating the normalised deviations\n",
+    "\n",
+    "    accuracy = Vector{Float64}(undef, 11);  # A vector to store solver accuracy\n",
+    "    varience = Vector{Float64}(undef, 11);  # A vector to store the variences\n",
+    "\n",
+    "    for i in 1:size(devs)[3];   # Looping through the sovler dimension \n",
+    "        accuracy[i] = mean(devs[1:end, 1:end, i]);  # Calculating the accuracy\n",
+    "        varience[i] = var(devs[1:end, 1:end, i]);   # Calculatinf the varience\n",
+    "    end\n",
+    "\n",
+    "    return accuracy, varience\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [],
@@ -265,50 +291,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11-element Vector{Float64}:\n",
-       " -0.30538402290592453\n",
-       "  0.00986113502896478\n",
-       " -0.008826009121766981\n",
-       " -0.001844123113837549\n",
-       "  0.003753685512460653\n",
-       "  0.0020803881230940405\n",
-       " -0.035732105738875496\n",
-       " -0.08252977960782096\n",
-       " -0.13305103099618648\n",
-       " -1.4523526918593928\n",
-       " -0.023692657629605318"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#* Analysis of the data for the hessian calculations\n",
-    "data = cat(hessian_data..., dims=3);    # Array construction for ease of use\n",
-    "meds = median(data, dims=3);            # Calculating the medians\n",
-    "devs = @.abs(data .- meds) ./ data;     # Calculating the normalised deviations\n",
-    "\n",
-    "accuracy = Vector{Float64}(undef, 11);  # A vector to store solver accuracy\n",
-    "varience = Vector{Float64}(undef, 11);  # A vector to store the variences\n",
-    "\n",
-    "for i in 1:size(devs)[3];   # Looping through the sovler dimension \n",
-    "    accuracy[i] = mean(devs[1:end, 1:end, i]);  # Calculating the accuracy\n",
-    "    varience[i] = var(devs[1:end, 1:end, i]);   # Calculatinf the varience\n",
-    "end\n",
-    "\n",
-    "accuracy\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [],
@@ -329,7 +311,9 @@
     "\n",
     "So this is from tomorrow onward. I also need the boxplot like thing.\n",
     "\n",
-    "Now, the time analysis is going to be pretty constant. I could add this back into the profile function however, I think this breaks up the logic a little bit and the return becomes awkward. I could write a function to do the time analysis or I could just do it manually for the four cases. I will start by doing it manually for the four cases but then I will probably write a function."
+    "Now, the time analysis is going to be pretty constant. I could add this back into the profile function however, I think this breaks up the logic a little bit and the return becomes awkward. I could write a function to do the time analysis or I could just do it manually for the four cases. I will start by doing it manually for the four cases but then I will probably write a function.\n",
+    "\n",
+    "So I think I will be able to increase the size of profile to include the new data. This will depend on whether or not I need the data in the middle there for other purposes or not."
    ]
   }
  ],
