Experimental implementation of the reverse mode

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -14,7 +14,7 @@
     "using DataFrames;               # For succinct data manipulation\n",
     "using CSV;                      # For writing the data to prevent constant re-running\n",
     "using ForwardDiff;              # For profiling the gradients \n",
-    "using Gadfly, Fontconfig, Cairo;# For plotting"
+    "# using Gadfly, Fontconfig, Cairo;# For plotting"
    ]
   },
   {
@@ -220,14 +220,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "accuracy_analysis"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "This function takes the data output of the profile function and analyses the results irrespective of the dimensionality.\n",
     "\"\"\"\n",
-    "function accuracy_analysis(accuracy_data::Vector{Any})::Tuple{Matrix{Float64}, Matrix{Float64}}\n",
+    "function accuracy_analysis(accuracy_data::Vector{Any})::Tuple{Vector{Float64}, Vector{Float64}}\n",
     "    data = cat(accuracy_data..., dims=3);   # Array construction for ease of use\n",
     "    meds = median(data, dims=3);            # Calculating the medians\n",
     "    devs = @.abs(data .- meds) ./ data;     # Calculating the normalised deviations\n",
@@ -246,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,9 +285,20 @@
     "\n",
     "# f_grad_times, f_grad_data = profile(solvers, select_autodiff,\n",
     "#     [derivative, burnsolution, params, ForwardDiff.gradient]);  # Running the forward mode \n",
-    "hessian_times, hessian_data = profile(solvers, select_autodiff,\n",
-    "    [derivative, burnsolution, params, ForwardDiff.hessian]);   # Running the hessians \n",
-    "# solvers = profile(solvers, run_solver, [derivative, burnsolution, params]); # Running the solvers"
+    "# hessian_times, hessian_data = profile(solvers, select_autodiff,\n",
+    "#     [derivative, burnsolution, params, ForwardDiff.hessian]);   # Running the hessians \n",
+    "# solver_times, solver_data = profile(solvers, run_solver,\n",
+    "#     [derivative, burnsolution, params]); # Running the solvers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol_time_mean, sol_time_var = time_analysis(solver_times);  # Solver times\n",
+    "sol_acc_mean, sol_acc_var = accuracy_analysis(solver_data); # Solver accuracy "
    ]
   },
   {
@@ -291,16 +313,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#* Analysis of the data values for the forwards mode gradients =\n",
-    "data = hcat(f_grad_data...);                        # So these are extremely different\n",
-    "gradient_mean = median(data, dims=2);               # Average value of each parameter gradient\n",
-    "data = (data .- gradient_mean) ./ gradient_mean;    # Calculating the normalised deviations\n",
-    "solver_accuracy = mean(data, dims=1);               # Caclulating the means of the solvers\n",
-    "solver_varience = var(data, dims=1);                # Caclulating the variances of the solvers "
+    "f_grad_acc, f_grad_acc_var = accuracy_analysis(f_grad_data);    # Accuracy of forward gradients \n",
+    "hessian_acc, hessian_acc_var = accuracy_analysis(hessian_data); # Accuracy of Hessians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using ReverseDiff;  # Experimental attempt\n",
+    "using DiffEqSensitivity;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loss_function (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function loss_function(params)     \n",
+    "    local ΔC14 = (solution .- u0[2]) ./ u0[2] .* 1000;  # Calculating ΔC14\n",
+    "    local miyake = DataFrame(CSV.File(\"Miyake12.csv\")); # Reading Miyake data\n",
+    "    local ΔC14 .+= mean(miyake.d14c[1:4]);  # Calculates the ticktack offset\n",
+    "    local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
+    "    return -0.5 * χ²\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "DimensionMismatch(\"arrays could not be broadcast to a common size; got a dimension with lengths 28 and 11\")",
+     "output_type": "error",
+     "traceback": [
+      "DimensionMismatch(\"arrays could not be broadcast to a common size; got a dimension with lengths 28 and 11\")",
+      "",
+      "Stacktrace:",
+      "  [1] _bcs1",
+      "    @ ./broadcast.jl:501 [inlined]",
+      "  [2] _bcs",
+      "    @ ./broadcast.jl:495 [inlined]",
+      "  [3] broadcast_shape",
+      "    @ ./broadcast.jl:489 [inlined]",
+      "  [4] combine_axes",
+      "    @ ./broadcast.jl:484 [inlined]",
+      "  [5] _axes",
+      "    @ ./broadcast.jl:209 [inlined]",
+      "  [6] axes",
+      "    @ ./broadcast.jl:207 [inlined]",
+      "  [7] combine_axes",
+      "    @ ./broadcast.jl:484 [inlined]",
+      "  [8] _axes",
+      "    @ ./broadcast.jl:209 [inlined]",
+      "  [9] axes",
+      "    @ ./broadcast.jl:207 [inlined]",
+      " [10] combine_axes",
+      "    @ ./broadcast.jl:484 [inlined]",
+      " [11] combine_axes",
+      "    @ ./broadcast.jl:483 [inlined]",
+      " [12] instantiate",
+      "    @ ./broadcast.jl:266 [inlined]",
+      " [13] materialize(bc::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{2}, Nothing, typeof(Base.literal_pow), Tuple{Base.RefValue{typeof(^)}, Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{2}, Nothing, typeof(/), Tuple{Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{2}, Nothing, typeof(-), Tuple{Vector{Float64}, VectorOfArray{Float64, 2, Vector{Vector{Float64}}}}}, Vector{Float64}}}, Base.RefValue{Val{2}}}})",
+      "    @ Base.Broadcast ./broadcast.jl:883",
+      " [14] loss_function(params::Vector{Float64})",
+      "    @ Main ./In[111]:7",
+      " [15] top-level scope",
+      "    @ In[112]:1",
+      " [16] eval",
+      "    @ ./boot.jl:360 [inlined]",
+      " [17] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "    @ Base ./loading.jl:1116"
+     ]
+    }
+   ],
+   "source": [
+    "solution = run_solver(BS3, derivative, burnsolution, params);"
    ]
   },
   {
