Incorporating analysis into the profile function

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -135,15 +135,16 @@
     "So this is highly experimental basically I am passing a function into the profile function, which takes only solver as an argument. This done using the wrapper method that I used earlier\n",
     "\"\"\"\n",
     "function profile(solvers::Vector, f::Function, args::Vector)\n",
-    "    local data = Vector{Any}(undef, length(solvers));     # Creating the storage Matrix \n",
-    "    local times = Vector{Any}(undef, length(solvers)); # For the mean of the times\n",
+    "    local acc_data = Vector{Any}(undef, length(solvers));   # Creating the storage Matrix \n",
+    "    local time_data = Vector{Any}(undef, length(solvers));  # For the mean of the times\n",
+    "    local results = DataFrame(solver = @.string(solvers));  # Storage system\n",
     "\n",
     "    for (index, solver) in enumerate(solvers)           # Looping over the solvers \n",
     "        local time_sample = Vector{Float64}(undef, 10); # The different run times of each trial \n",
     "        for i in 1:10\n",
-    "            local timer = time();                       # Starting a timer\n",
-    "            solution = f(solver, args...);    # Running the solver\n",
-    "            time_sample[i] = time() - timer;            # ending the timer \n",
+    "            local timer = time();           # Starting a timer\n",
+    "            solution = f(solver, args...);  # Running the solver\n",
+    "            time_sample[i] = time() - timer;# ending the timer \n",
     "\n",
     "            if i == 10                  # Storing final run\n",
     "                data[index] = solution; # filling C14\n",
@@ -151,6 +152,27 @@
     "        end\n",
     "        times[index] = time_sample;   # Storing run time ignoring compile run.\n",
     "    end \n",
+    "\n",
+    "    #* Accuracy Analysis \n",
+    "    acc_data = cat(acc_data..., dims=3);        # Array construction for ease of use\n",
+    "    local meds = median(acc_data, dims=3);      # Calculating the medians\n",
+    "    local devs = @.abs(data .- meds) ./ data;   # Calculating the normalised deviations\n",
+    "\n",
+    "    accuracy = Vector{Float64}(undef, 11);  # A vector to store solver accuracy\n",
+    "    acc_vars = Vector{Float64}(undef, 11);  # A vector to store the variences\n",
+    "\n",
+    "    for i in 1:size(devs)[3];   # Looping through the sovler dimension \n",
+    "        accuracy[i] = mean(devs[1:end, 1:end, i]);  # Calculating the accuracy\n",
+    "        acc_vars[i] = var(devs[1:end, 1:end, i]);   # Calculatinf the varience\n",
+    "    end\n",
+    "\n",
+    "    #* Time analysis \n",
+    "    times = hcat(time_data...);         # Array construction for ease of manipulation \n",
+    "    times = times[2:end, 1:end];        # Removing the compilation run\n",
+    "    local tmean = mean(times, dims=1);  # Calculating the average time\n",
+    "    local tvars = var(times, dims=1);   # Caclulating the varience by solver\n",
+    "\n",
+    "    #* Assinging to the data frame \n",
     "    return times, data\n",
     "end"
    ]
@@ -186,72 +208,6 @@
     "        return -0.5 * χ²\n",
     "    end\n",
     "    return f(loss_function, parameters);\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "time_analysis"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Given the time ouput of the `profile` function, this function calculates the time statistics and returns the means and variances as two column vectors. \n",
-    "\"\"\"\n",
-    "function time_analysis(time_data::Vector{Any})::Tuple{Matrix{Float64}, Matrix{Float64}}\n",
-    "    times = hcat(time_data...);     # Array construction for ease of manipulation \n",
-    "    times = times[2:end, 1:end];    # Removing the compilation run\n",
-    "    tmean = mean(times, dims=1);    # Calculating the average time\n",
-    "    tvars = var(times, dims=1);     # Caclulating the varience by solver\\\n",
-    "    return tmean, tvars\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "accuracy_analysis"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "This function takes the data output of the profile function and analyses the results irrespective of the dimensionality.\n",
-    "\"\"\"\n",
-    "function accuracy_analysis(accuracy_data::Vector{Any})::Tuple{Vector{Float64}, Vector{Float64}}\n",
-    "    data = cat(accuracy_data..., dims=3);   # Array construction for ease of use\n",
-    "    meds = median(data, dims=3);            # Calculating the medians\n",
-    "    devs = @.abs(data .- meds) ./ data;     # Calculating the normalised deviations\n",
-    "\n",
-    "    accuracy = Vector{Float64}(undef, 11);  # A vector to store solver accuracy\n",
-    "    varience = Vector{Float64}(undef, 11);  # A vector to store the variences\n",
-    "\n",
-    "    for i in 1:size(devs)[3];   # Looping through the sovler dimension \n",
-    "        accuracy[i] = mean(devs[1:end, 1:end, i]);  # Calculating the accuracy\n",
-    "        varience[i] = var(devs[1:end, 1:end, i]);   # Calculatinf the varience\n",
-    "    end\n",
-    "\n",
-    "    return accuracy, varience\n",
     "end"
    ]
   },
@@ -323,92 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using ReverseDiff;  # Experimental attempt\n",
-    "using DiffEqSensitivity;"
+    "#* So I am going to implement the plot in this cell \n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 114,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "loss_function (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "function loss_function(params)     \n",
-    "    local ΔC14 = (solution .- u0[2]) ./ u0[2] .* 1000;  # Calculating ΔC14\n",
-    "    local miyake = DataFrame(CSV.File(\"Miyake12.csv\")); # Reading Miyake data\n",
-    "    local ΔC14 .+= mean(miyake.d14c[1:4]);  # Calculates the ticktack offset\n",
-    "    local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
-    "    return -0.5 * χ²\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "DimensionMismatch(\"arrays could not be broadcast to a common size; got a dimension with lengths 28 and 11\")",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch(\"arrays could not be broadcast to a common size; got a dimension with lengths 28 and 11\")",
-      "",
-      "Stacktrace:",
-      "  [1] _bcs1",
-      "    @ ./broadcast.jl:501 [inlined]",
-      "  [2] _bcs",
-      "    @ ./broadcast.jl:495 [inlined]",
-      "  [3] broadcast_shape",
-      "    @ ./broadcast.jl:489 [inlined]",
-      "  [4] combine_axes",
-      "    @ ./broadcast.jl:484 [inlined]",
-      "  [5] _axes",
-      "    @ ./broadcast.jl:209 [inlined]",
-      "  [6] axes",
-      "    @ ./broadcast.jl:207 [inlined]",
-      "  [7] combine_axes",
-      "    @ ./broadcast.jl:484 [inlined]",
-      "  [8] _axes",
-      "    @ ./broadcast.jl:209 [inlined]",
-      "  [9] axes",
-      "    @ ./broadcast.jl:207 [inlined]",
-      " [10] combine_axes",
-      "    @ ./broadcast.jl:484 [inlined]",
-      " [11] combine_axes",
-      "    @ ./broadcast.jl:483 [inlined]",
-      " [12] instantiate",
-      "    @ ./broadcast.jl:266 [inlined]",
-      " [13] materialize(bc::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{2}, Nothing, typeof(Base.literal_pow), Tuple{Base.RefValue{typeof(^)}, Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{2}, Nothing, typeof(/), Tuple{Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{2}, Nothing, typeof(-), Tuple{Vector{Float64}, VectorOfArray{Float64, 2, Vector{Vector{Float64}}}}}, Vector{Float64}}}, Base.RefValue{Val{2}}}})",
-      "    @ Base.Broadcast ./broadcast.jl:883",
-      " [14] loss_function(params::Vector{Float64})",
-      "    @ Main ./In[111]:7",
-      " [15] top-level scope",
-      "    @ In[112]:1",
-      " [16] eval",
-      "    @ ./boot.jl:360 [inlined]",
-      " [17] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "    @ Base ./loading.jl:1116"
-     ]
-    }
-   ],
-   "source": [
-    "solution = run_solver(BS3, derivative, burnsolution, params);"
+    "So basically, I will need to run the model twice to get the time indexes for each of the instances so that I can perform the binning."
    ]
   },
   {
