--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -5139,6 +5139,13 @@
     "draw(PDF(\"solver_profiles.pdf\", 20cm, 20cm), something); # Saving the figure \n",
     "CSV.write(\"solver_profiles.csv\", results);  # Writing the results to a CSV"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Small change"
+   ]
   }
  ],
  "metadata": {
