--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -115,10 +115,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'odeint' from 'jax' (/home/jordan/.local/lib/python3.8/site-packages/jax/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-09b15ee1d368>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mjax\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0modeint\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mjaxodenint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mjax_carbon_concentrations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjaxodeint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdydx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m760.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m790.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'odeint' from 'jax' (/home/jordan/.local/lib/python3.8/site-packages/jax/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import jax.experimental.ode as jax\n",
+    "jax_carbon_concentrations = jax.odeint(dydx, u0, np.arange(760.0, 790.0, 1))"
+   ]
   },
   {
    "cell_type": "code",
